# wavecli

./: .gitignore  Cargo.toml  README.md
src/: app.rs  decoder.rs  main.rs  player.rs
src/analysis/: mod.rs  spectrogram.rs  waveform.rs
src/ui/: controls.rs  file_browser.rs  info_table.rs  layout.rs  mod.rs  spectrogram.rs  waveform.rs
